--- a/src/pybind/mgr/dashboard/frontend/src/app/core/auth/user-tabs/user-tabs.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/auth/user-tabs/user-tabs.component.html
@@ -9,4 +9,9 @@
        [active]="url === '/user-management/roles'"
        (select)="navigateTo('/user-management/roles')">
   </tab>
+  <tab heading="Single Sign-On"
+       i18n-heading
+       [active]="url === '/user-management/sso'"
+       (select)="navigateTo('/user-management/sso')">
+  </tab>
 </tabset>
