--- a/src/pybind/mgr/dashboard/frontend/src/app/core/auth/login/login.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/auth/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login"
-     *ngIf="isLocalLogin">
+     *ngIf="isLoginActive">
   <div class="row full-height vertical-align">
     <div class="col-sm-6 hidden-xs">
       <img src="assets/Ceph_Logo_Stacked_RGB_White_120411_fa_256x256.png"
