NSF Demo frontend
Signed-off-by: Ricardo Marques <rimarques@suse.com>

--- a/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/navigation/navigation.component.html
+++ b/src/pybind/mgr/dashboard/frontend/src/app/core/navigation/navigation/navigation.component.html
@@ -183,6 +183,14 @@
           </li>
         </ul>
       </li>
+
+      <!-- NFS -->
+      <li routerLinkActive="active"
+          class="tc_menuitem tc_menuitem_pool">
+        <a i18n
+           routerLink="/nfs">NFS Demo
+        </a>
+      </li>
     </ul>
     <!-- /.navbar-primary -->
 
